--- a/architecture-module-library/src/main/res/values/colors.xml
+++ b/architecture-module-library/src/main/res/values/colors.xml
@@ -3,4 +3,20 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="default_pressed">#1A50B24A</color>
+    <color name="default_pressed_">#3350B24A</color>
+    <color name="colorRed">#F34C4D</color>
+    <color name="colorRedBg">#FAD4DA</color>
+    <color name="colorGreen">#50BE86</color>
+    <color name="colorGreenBg">#D1F1E7</color>
+    <color name="colorYellow">#FDCB33</color>
+    <color name="colorYellowBg">#FFFBE0</color>
+    <color name="colorBlue">#257FF9</color>
+    <color name="colorBlueBg">#D8E2FE</color>
+    <color name="colorChocorol">#393939</color>
+    <color name="colorChocorolBg">#DCDCDC</color>
+    <color name="lightTextColor">@android:color/white</color>
+
+
 </resources>
