--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
     tools:context=".MainActivity">
 
-    <fragment
-        class="com.carlsberg_stack.archetecture_module.MainFragment"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/main"
-        android:layout_weight="1" />
-    <Button
-        android:id="@+id/simple_toast"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="toast"
-        android:text="Simple Toast"/>
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/warning_toast"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="toast"
-        android:text="warning Toast"/>
+        <fragment
+            android:id="@+id/main"
+            class="com.carlsberg_stack.archetecture_module.MainFragment"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
 
-    <Button
-        android:id="@+id/error_toast"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="toast"
-        android:text="error Toast"/>
+        <Button
+            android:id="@+id/simple_toast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="toast"
+            android:text="Simple Toast" />
 
-    <Button
-        android:id="@+id/success_toast"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="toast"
-        android:text="success Toast"/>
+        <Button
+            android:id="@+id/warning_toast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="toast"
+            android:text="warning Toast" />
 
-    <Button
-        android:id="@+id/info_toast"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="toast"
-        android:text="info Toast"/>
+        <Button
+            android:id="@+id/error_toast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="toast"
+            android:text="error Toast" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/success_toast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="toast"
+            android:text="success Toast" />
+
+        <Button
+            android:id="@+id/info_toast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="toast"
+            android:text="info Toast" />
+
+        <Button
+            android:id="@+id/show_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="toast"
+            android:text="show_list" />
+
+        <Button
+            android:id="@+id/show_confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="toast"
+            android:text="show_confirm" />
+
+        <Button
+            android:id="@+id/show_alert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="toast"
+            android:text="show_alert" />
+
+    </LinearLayout>
+
+</ScrollView>
