--- a/architecture-module-library/src/main/res/drawable/carls_rect_with_corner_fill_trans_stroke_black.xml
+++ b/architecture-module-library/src/main/res/drawable/carls_rect_with_corner_fill_trans_stroke_black.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="50dp" />
-    <solid android:color="@color/colorYellowBg" />
+    <solid android:color="@color/carls_color_chocorol_bg" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorYellow" />
+        android:color="@color/carls_color_chocorol" />
 </shape>
