--- a/architecture-module-library/src/main/res/drawable/carls_rect_with_corner_fill_trans_stroke_green.xml
+++ b/architecture-module-library/src/main/res/drawable/carls_rect_with_corner_fill_trans_stroke_green.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="50dp" />
-    <solid android:color="@color/colorChocorolBg" />
+    <solid android:color="@color/carls_color_green_bg" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorChocorol" />
+        android:color="@color/carls_color_green" />
 </shape>
