--- a/architecture-module-library/src/main/res/values/styles.xml
+++ b/architecture-module-library/src/main/res/values/styles.xml
@@ -1,33 +1,33 @@
 <resources>
 
-    <style name="Appearance.App.Dialog" parent="ThemeOverlay.AppCompat.Dialog.Alert">
-        <item name="android:textColorPrimary">@color/colorPrimary</item>
-        <item name="textColorAlertDialogListItem">@android:color/darker_gray</item>
-        <item name="android:windowTitleStyle">@style/Appearance.App.Dialog.TitleStyle</item>
+    <style name="Carls.Appearance.App.Dialog" parent="ThemeOverlay.AppCompat.Dialog.Alert">
+<!--        <item name="android:textColorPrimary">@color/colorPrimary</item>
+        <item name="textColorAlertDialogListItem">@color/colorPrimary</item>
+        <item name="android:windowTitleStyle">@style/Carls.Appearance.App.Dialog.TitleStyle</item>
         <item name="android:windowBackground">@android:color/white</item>
-        <item name="android:colorAccent">@color/colorAccent</item>
+        <item name="android:colorAccent">@color/colorAccent</item>-->
         <item name="windowFixedWidthMajor">75%</item>
         <item name="windowFixedWidthMinor">75%</item>
     </style>
 
-    <style name="Appearance.App.Dialog.TitleStyle">
+ <!--   <style name="Carls.Appearance.App.Dialog.TitleStyle">
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
-    </style>
+    </style>-->
 
-    <style name="Appearance_App_TextStyleLight_Small">
-        <item name="android:textColor">@color/lightTextColor</item>
+    <style name="Carls_Appearance_App_TextStyleLight_Small">
+        <item name="android:textColor">@color/carls_light_text_color</item>
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
     </style>
 
-    <style name="Appearance_App_TextStyleLight_Medium">
-        <item name="android:textColor">@color/lightTextColor</item>
+<!--    <style name="Carls_Appearance_App_TextStyleLight_Medium">
+        <item name="android:textColor">@color/carls_light_text_color</item>
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
     </style>
 
-    <style name="Appearance_App_TextStyleLight_Largr">
-        <item name="android:textColor">@color/lightTextColor</item>
+    <style name="Carls_Appearance_App_TextStyleLight_Large">
+        <item name="android:textColor">@color/carls_light_text_color</item>
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
-    </style>
+    </style>-->
 
 </resources>
