--- a/architecture-module-library/src/main/res/drawable/carls_rect_with_corner_fill_accent.xml
+++ b/architecture-module-library/src/main/res/drawable/carls_rect_with_corner_fill_accent.xml
@@ -2,8 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="50dp" />
-    <solid android:color="@color/colorPrimary" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorAccent" />
 </shape>
